SO SWAG IM FINALLY DONE LETS GOOOOOOOOOOgit add .git add .git add .!

--- a/navigation1.html
+++ b/navigation1.html
@@ -34,7 +34,7 @@
             <ul>
                 <li>
                     <i class="fas fa-home"></i>
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <i class="fas fa-user-alt"></i>
