--- a/progress.html
+++ b/progress.html
@@ -18,7 +18,14 @@
             <button class="btn" id="next">Next</button>
 
         </div>
-
+        <div class="home-container">
+            <div class="home">
+                <a href="index.html">
+                    <button id="home-btn" title="Click here to return to the home page!">
+                        <i class="fas fa-home"></i>
+                    </button>
+        </div>
+        <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/progress.js"></script>
     </body>
 </html>
