--- a/index.html
+++ b/index.html
@@ -8,41 +8,43 @@
     </head>
 
     <body>
+        </div>
         <div class="title">
             <h1>Katie's Web Page</h1>
         </div>
         <div class="container">
             <div class="search">
                 <a href="search.html">
-                    <button class="btn">
-                        <i class="fa solid fa-magnifying-glass"></i>
+                    <button class="btn" title="Click here for Search!">
+                            <i class="fa solid fa-magnifying-glass"></i>
+                        </button>
                     </button>
                 </a>
             </div>
             <div class="loading">
                 <a href="loading.html">
-                    <button class="btn">
+                    <button class="btn" title="Click here for Loading!">
                         <i class="fa solid fa-rotate-right"></i>
                     </button>
                 </a>
             </div>
             <div class="expanding">
                 <a href="expanding.html">
-                    <button class="btn">
+                    <button class="btn" title="Click here for Expanding!">
                         <i class="fa solid fa-plus"></i>
                     </button>
                 </a>
             </div>
             <div class="progress">
                 <a href="progress.html">
-                    <button class="btn">
+                    <button class="btn" title="Click here for Progress!">
                         <i class="fa solid fa-gears"></i>
                     </button>
                 </a>
             </div>
             <div class="navigation1">
                 <a href="navigation1.html">
-                    <button class="btn">
+                    <button class="btn" title="Click here for Navigation!">
                         <i class="fa solid fa-bars"></i>
                     </button>
                 </a>
