--- a/loading.html
+++ b/loading.html
@@ -10,6 +10,14 @@
     <body>
         <div class="bg"></div>
         <div class="loading-text active">0%</div>
+        <div class="home-container">
+            <div class="home">
+                <a href="index.html">
+                    <button id="home-btn" title="Click here to return to the home page!">
+                        <i class="fas fa-home"></i>
+                    </button>
+        </div>
+        <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/loading.js"></script>
     </body>
 </html>
