--- a/search.html
+++ b/search.html
@@ -14,6 +14,13 @@
                 <i class="fa solid fa-magnifying-glass"></i>
             </button>
         </div>
+        <div class="home-container">
+            <div class="home">
+                <a href="index.html">
+                    <button id="home-btn" title="Click here to return to the home page!">
+                        <i class="fas fa-home"></i>
+                    </button>
+        </div>
         <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/search.js"></script>
     </body>
