--- a/sounds.html
+++ b/sounds.html
@@ -4,7 +4,6 @@
     <head>
         <title>Sounds</title>
         <link rel="stylesheet" href="css/sounds.css">
-
     </head>
 
     <body>
@@ -13,10 +12,9 @@
         <audio id="gasp" src="sounds/gasp.mp3"></audio>
         <audio id="tada" src="sounds/tada.mp3"></audio>
         <audio id="victory" src="sounds/victory.mp3"></audio>
-        <audio id="wrong" src="sounds/wrongs.mp3"></audio>
+        <audio id="wrong" src="sounds/wrong.mp3"></audio>
 
         <div id="buttons"></div>
-
         <script src="js/sounds.js"></script>
     </body>
 </html>
