--- a/counter.html
+++ b/counter.html
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-
+        
+        <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/counter.js"></script>
     </body>
 </html>
