Tue, Mar 21, 2023, 2:28 PM -07:00

--- a/counter.html
+++ b/counter.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-        
+        <div class="counter-container">
+            <i class="fab fa-twitter fa-3x"></i>
+        </div>
+
         <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/counter.js"></script>
     </body>
