--- a/counter.html
+++ b/counter.html
@@ -9,6 +9,8 @@
     <body>
         <div class="counter-container">
             <i class="fab fa-twitter fa-3x"></i>
+            <div class="counter" data-target="12000">12000</div>
+            <span>Twitter Followers</span>
         </div>
 
         <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
