--- a/counter.html
+++ b/counter.html
@@ -13,6 +13,18 @@
             <span>Twitter Followers</span>
         </div>
 
+        <div class="counter-container">
+            <i class="fab fa-twitter fa-3x"></i>
+            <div class="counter" data-target="5000">5000</div>
+            <span>Youtube Subscribers</span>
+        </div>
+
+        <div class="counter-container">
+            <i class="fab fa-twitter fa-3x"></i>
+            <div class="counter" data-target="7500">7500</div>
+            <span>Facebook Fans</span>
+        </div>
+
         <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/counter.js"></script>
     </body>
