--- a/typing.html
+++ b/typing.html
@@ -10,7 +10,7 @@
     <body>
         <h1 id="text">Starting . . .</h1>
         <label for="speed">Speed:</label>
-        <input type="number" name="speed" id="speed"
+        <input type="number" name="speed" id="speed" value="1" min="1" max="10" step="1"> 
         <script src="js/typing.js"></script>
     </body>
 </html>
