Thu, Apr 13, 2023, 2:10 PM -07:00

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                     </button>
                 </a>
         </div>
+        <div class="sounds">
+            <a href="sounds.html">
+                <button class="btn" title="Click here for Sounds!">
+                    <i class="fa solid fa-gears"></i>
+                </button>
+            </a>
+        </div>
         <div class="overlay"></div>
         <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
         <script src="js/index.js"></script>
