Thu, Apr 13, 2023, 2:16 PM -07:00

--- a/index.html
+++ b/index.html
@@ -52,7 +52,42 @@
         <div class="sounds">
             <a href="sounds.html">
                 <button class="btn" title="Click here for Sounds!">
-                    <i class="fa solid fa-gears"></i>
+                    <i class="fa solid fa-music"></i>
+                </button>
+            </a>
+        </div>
+        <div class="sounds">
+            <a href="sounds.html">
+                <button class="btn" title="Click here for Sounds!">
+                    <i class="fa solid fa-music"></i>
+                </button>
+            </a>
+        </div>
+        <div class="jokes">
+            <a href="jokes.html">
+                <button class="btn" title="Click here for Jokes!">
+                    <i class="fa solid fa-music"></i>
+                </button>
+            </a>
+        </div>
+        <div class="counter">
+            <a href="counter.html">
+                <button class="btn" title="Click here for Counter!">
+                    <i class="fa solid fa-music"></i>
+                </button>
+            </a>
+        </div>
+        <div class="color">
+            <a href="colorboard.html">
+                <button class="btn" title="Click here for Color!">
+                    <i class="fa solid fa-music"></i>
+                </button>
+            </a>
+        </div>
+        <div class="typing">
+            <a href="typing.html">
+                <button class="btn" title="Click here for Typing!">
+                    <i class="fa solid fa-music"></i>
                 </button>
             </a>
         </div>
