Thu, Apr 13, 2023, 2:20 PM -07:00

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="jokes">
             <a href="jokes.html">
                 <button class="btn" title="Click here for Jokes!">
-                    <i class="fa solid fa-music"></i>
+                    <i class="fa solid fa-face-awesome"></i>
                 </button>
             </a>
         </div>
