--- a/index.html
+++ b/index.html
@@ -56,24 +56,17 @@
                 </button>
             </a>
         </div>
-        <div class="sounds">
-            <a href="sounds.html">
-                <button class="btn" title="Click here for Sounds!">
-                    <i class="fa solid fa-music"></i>
-                </button>
-            </a>
-        </div>
         <div class="jokes">
             <a href="jokes.html">
                 <button class="btn" title="Click here for Jokes!">
-                    <i class="fa solid fa-face-awesome"></i>
+                    <i class="fa solid fa-poo"></i>
                 </button>
             </a>
         </div>
         <div class="counter">
             <a href="counter.html">
                 <button class="btn" title="Click here for Counter!">
-                    <i class="fa solid fa-music"></i>
+                    <i class="fa solid fa-calendar-days"></i>
                 </button>
             </a>
         </div>
