Thu, Apr 13, 2023, 2:25 PM -07:00

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         <div class="color">
             <a href="colorboard.html">
                 <button class="btn" title="Click here for Color!">
-                    <i class="fa solid fa-music"></i>
+                    <i class="fa solid fa-palette"></i>
                 </button>
             </a>
         </div>
         <div class="typing">
             <a href="typing.html">
                 <button class="btn" title="Click here for Typing!">
-                    <i class="fa solid fa-music"></i>
+                    <i class="fa solid fa-keyboard"></i>
                 </button>
             </a>
         </div>
